# tair-kvcache

./: .bazelrc  .gitignore  hisim-demo运行命令.md  pd_disagg_modeling_review.md
hisim/: .gitignore  README.md  README_zh.md  init.sh  pyproject.toml  run_hisim_demo.sh  sglang_0519_5_1024_1024.jsonl  sglang_0520_5_1024_1024.jsonl  实习工作计划.md
hisim/docs/: Hisim × AIConfigurator 解析.md  Hisim_AIC.md  Hisim_AIC_changelog.md  dashboard_handbook.md  mydevelopment_branch_overview_20260605.md  pd_ab_equivalence_spec.md  pd_decode_ab_execution_template_20260605.md  pd_decode_upgrade_plan_20260605.md  pd_demo_guide.html  pd_vs_agg_runbook.md
hisim/src/hisim/simulation/: bench_serving.py  pd_ab_check.py  pd_ab_compare.py  pd_ab_harness.py  pd_aic_adapter.py  pd_aic_factory.py  pd_backend_a.py  pd_backend_b.py  pd_backend_protocol.py  pd_config.py  pd_controller.py  pd_factory.py  pd_metrics.py  pd_runtime.py  pd_timeline.py  (+5 more)
hisim/test/: test_aic_xgb_predictor.py  test_aiconfigurator_compat.py  test_bench_serving_simulation.py  test_pd_disagg.py  test_simulation_sglang_launch_server.py  test_simulation_time_predictor.py
hisim/tests/integration/: test_sweep_plot_cli.py  test_sweep_tool_plot_wiring.py
hisim/tools/: agg_h100_w1_w6.py  aic_to_hisim_bridge.py  aic_topn_to_hisim_sweep.py  ep_ablation_run.py  pd_demo.py  pd_demo_e2e.sh  pd_disagg_h100_rtx6000_sglang_0_5_10.json  pd_disagg_rtx6000_sglang_0_5_10.json  pd_vs_agg_compare.py  sweep_dashboard.py  sweep_plot.py  trace_pd_topology_b60.py  trace_w1_w6.py  trace_w1_w6_html.py  trace_w1_w6_real_hw.py  validate_pd_disagg_changes.sh
(+268 files in other folders)
