[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hisim"
dynamic = ["version"]
description = "A simulation benchmark tool for hicache"
dependencies = [
    "numpy",
    "scikit-learn",
    "xgboost",
    "aiconfigurator @ git+https://github.com/ai-dynamo/aiconfigurator.git@h20e-higher-acc"
]

[project.optional-dependencies]
viz = [
    "pandas>=2.0",
    "plotly>=5.0",
    "jinja2>=3.0",
]
dashboard = [
    "pandas>=2.0",
    "plotly>=5.0",
    "jinja2>=3.0",
    "streamlit>=1.30",
]
